--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,87 @@
-/* You can add global styles to this file, and also import other style files */
+/* Estilo global para todas as páginas */
+html {
+  height: 100vh;
+}
+
+body {
+  /* font-family: Arial, Helvetica, sans-serif; */
+  font-family: Arial;
+  color: #404c51;
+  margin: 0;
+}
+
+
+label {
+  font-weight: bold;
+
+}
+
+h1 {
+  font-size: 1.7em;
+}
+
+a {
+  color: #337ab7;
+  text-decoration: none;
+}
+
+
+.ui-fieldset-legend {
+  text-align: center;
+  color: white;
+  background-color: #69b3f5;
+}
+
+/* Aplica a regra abaixo soemnte se espacço disponivel >= 1200 px*/
+@media (max-height: 600px) {
+  h1 {
+    font-size: 1.3em;
+    margin: 0px;
+  }
+}
+/* Aplica a regra abaixo soemnte se espacço disponivel >= 1200 px*/
+@media (min-width: 1200px) {
+  .meu-container {
+    width: 1170px;
+    height: 100%;
+    margin: 0 auto; /*centraliza*/
+  }
+}
+/* ====== CSS vale para toda a aplicação =======  */
+.col-header-170px { /* deve ser aplicado ao header da table */
+  width: 120px;
+}
+.col-header-150px {
+  width: 120px;
+}
+.col-header-120px {
+  width: 120px;
+}
+
+.col-header-100px {
+  width: 100px;
+}
+
+.col-header-90px {
+  width: 90px;
+}
+
+.col-header-70px {
+  width: 70px;
+}
+
+.col-direita {
+  text-align: right;
+}
+
+.col-centro {
+  text-align: center;
+}
+
+.col-esquerda {
+  text-align: left;
+}
+/* ====== ============================ =======  */
+
+
+
