--- a/src/app/core/barra-navegacao/barra-navegacao.component.html
+++ b/src/app/core/barra-navegacao/barra-navegacao.component.html
@@ -11,13 +11,14 @@
   <!-- Barra Lateral -->
   <div id="barra-lateral" class="navegacao-lateral" [style.width]="getLargura()">
       <a href="javascript:void(0)" class="btn-fechar" (click)="fecharMenu()">&times;</a>
+      <a routerLink="/painel" routerLinkActive="linkativo" (click)="fecharMenu()"
+        *ngIf="auth.temPermissao('ROLE_PESQUISAR_LANCAMENTO')">Início</a>
       <a routerLink="/lancamentos" routerLinkActive="linkativo" (click)="fecharMenu()"
         *ngIf="auth.temPermissao('ROLE_PESQUISAR_LANCAMENTO')">Lançamentos</a>
       <a routerLink="/pessoas" routerLinkActive="linkativo" (click)="fecharMenu()"
         *ngIf="auth.temPermissao('ROLE_PESQUISAR_PESSOA')">Pessoas</a>
-      <!-- linkativo é uma classe css do componente  -->
-
-      <a href="#">Categorias</a>
+      <a routerLink="/relatorios/lancamentos" routerLinkActive="linkativo" (click)="fecharMenu()"
+        *ngIf="auth.temPermissao('ROLE_PESQUISAR_PESSOA')">Relatórios</a>
       <a class="ultima" (click)="logout()" >Logout</a>
       <!-- colcando somente href="/lancamentos" funciona, mas nao é o certo. Recarrega tudo  -->
       <!-- O certo é usar o routerLink="/lancamentos"  -->
