--- a/src/app/pessoas/pesquisa-pessoas/pesquisa-pessoas.component.html
+++ b/src/app/pessoas/pesquisa-pessoas/pesquisa-pessoas.component.html
@@ -45,8 +45,12 @@
         <ng-template pTemplate="body" let-pessoa>
           <tr>
             <td class="col-centro">
-              <button pButton icon="fa-pencil" pTooltip="Editar" tooltipPosition="top" [routerLink]="['/pessoas', pessoa.codigo]"></button>
-              <button pButton icon="fa-trash" pTooltip="Excluir" tooltipPosition="top" (click)="confirmarExclusao(pessoa)"></button>
+              <button pButton icon="fa-pencil" pTooltip="Editar"
+                      tooltipPosition="top" [routerLink]="['/pessoas', pessoa.codigo]"
+                      [disabled]="!authService.temPermissao('ROLE_CADASTRAR_PESSOA')"></button>
+              <button pButton icon="fa-trash" pTooltip="Excluir"
+                      tooltipPosition="top" (click)="confirmarExclusao(pessoa)"
+                      [disabled]="!authService.temPermissao('ROLE_REMOVER_PESSOA')"></button>
             </td>
             <td>
               <span class="ui-column-title">Nome:</span>
@@ -63,7 +67,8 @@
             <td class="col-centro">
               <span class="ui-column-title">Status:</span>
               <p-inputSwitch onLabel="Sim" offLabel="Não" [pTooltip]="pessoa.ativo ? 'desativar' : 'ativar'"
-                    tooltipPosition="bottom" [(ngModel)]="pessoa.ativo" (onChange)="mudarStatus(pessoa)">
+                    tooltipPosition="bottom" [(ngModel)]="pessoa.ativo" (onChange)="mudarStatus(pessoa)"
+                    [disabled]="!authService.temPermissao('ROLE_CADASTRAR_PESSOA')">
               </p-inputSwitch>
             </td>
           </tr>
@@ -82,7 +87,8 @@
   </div>
 
   <div class="ui-g-12">
-    <a pButton label="Incluir pessoa" routerLink="/pessoas/nova"></a>
+    <button pButton label="Incluir pessoa" routerLink="/pessoas/nova"
+        [disabled]="!authService.temPermissao('ROLE_CADASTRAR_PESSOA')"></button>
   </div>
 
 </div>
